src/test/deca/context/invalid/created/SansObjet/VoidVar.deca
// Description:
//    Teste la déclaration d'une variable de type void
// Resultats:
//    VoidVar.deca:7:4: Error: 'void' cannot be used as a type for variable declaration

{
    void a;
}
